# mermaid-designer

./: next.config.js  package-lock.json  package.json  tailwind.config.ts  tailwind.config.ts.bak
desktop/: pyproject.toml  requirements.txt  setup.py
desktop/src/: main.py
docs/: blueprint.md
src/ai/: dev.ts
src/ai/flows/: mermaid-code-completion.ts  mermaid-diagram-generation.ts  mermaid-syntax-repair.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-header.tsx  mermaid-code-editor.tsx  mermaid-visualizer.tsx
