[project]
name = "desktop-wrapper"
version = "0.10"
description = "A wrapper for web apps as a desktop"
authors = [
    {name = "Jamie Forrest"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
